# Seoul_Virtual_Autonomous_Diving_Challenge

./: README.md
camera/: CMakeLists.txt  package.xml
camera/scripts/: lane_detector.py  lane_fitting.py  object_detector.py  object_detector_.py  pedes_detector.py
camera/sensor/: camera_setting.txt  sensor_params.json
control/: CMakeLists.txt  package.xml
control/launch/: drive.launch  lattice_driving.launch
control/rviz/: lane_detection_rviz.rviz
control/scripts/: controller_obstacle_avoidance.py  pure_pursuit_obstacle_avoidance.py  pure_pursuit_pid_velocity_planning.py
gpsimu/: CMakeLists.txt  package.xml
gpsimu/scripts/: tf_pub.py
lidar/: CMakeLists.txt  package.xml
lidar/scripts/: laser_to_map.py  velodyne_cluster.py  velodyne_cluster_temp.py  velodyne_parser.py
lidar/sensor/: lidar_setting.txt
map/: CMakeLists.txt  link_set.json  node_set.json  package.xml
path_planner/: CMakeLists.txt  package.xml
path_planner/launch/: path_maker.launch
path_planner/path/: SScity.txt  global_path_lane_1.txt  global_path_lane_2.txt
path_planner/scripts/: custom_path_pub.py  global_path_lane_1_pub.py  global_path_lane_2_pub.py  global_path_pub.py  global_path_pub_temp.py  lattice_planner.py  local_path_lane_1_pub.py  local_path_lane_2_pub.py  local_path_pub.py  local_path_pub_ttemp.py  path_maker.py  path_maker2.py  path_planner.py  path_smoothing.py
